lubuntu-default-settings (0.7) UNRELEASED; urgency=low

  * usr/bin/start* : 
   - Install a custom preferences file for Chromium.
   - Ensure the menu prefix
  * etc/xdg/lubuntu/lxdm/lxdm.conf
   - Make Lubuntu the default session by using the [base] session key.
   - Remove last_*, not provided by lxdm.conf in recent lxdm version.
  * debian/control
   - Wrap build-depends and depends.

 -- Julien Lavergne <gilir@ubuntu.com>  Mon, 01 Mar 2010 00:38:35 +0100

lubuntu-default-settings (0.6) lucid; urgency=low

  * Set iconsize to 22 and panel height to 24 for panel settings. It displays
    correct icons size for panel icons. Thanks Leszek Lesner.
  * usr/bin/start* : 
   - From LXDE upstream, make sure dbus is launched when it's necessary.
   - Add polkit-gnome-authentification-agent-1 to make polkit working again.
  * Add custom defaults.list for applications by default.
  * debian/dirs: Add /etc/lxdm, to be sure the directory exit (LP: #527482).

 -- Julien Lavergne <gilir@ubuntu.com>  Mon, 01 Mar 2010 00:35:26 +0100

lubuntu-default-settings (0.5) lucid; urgency=low

  * Add new Lubuntu-Netbook session, which launched lxlauncher by default.
  * Add new configuration of lxdm for Lubuntu.
  * debian/postinst & debian/prerm: Add a alternative lxdm.conf for Lubuntu
    settings.
  * autostart : Add nm-applet to the sessions.
  * Use system-shutdown-panel icon for shutdown command and clean Encoding keys
  * Use Chromium instead of Firefox inthe  panel and openbox configuration.
  * Remove cpu and netstat plugin, and move volume applet before the tray.
  * Complete openbox keybindings for taking screenshot. Thanks Adam for the
    patch.
  * Switch to Lubuntu custom theme :
    - debian/control : Depends on lubuntu-artwork (>= 0.4) and 
      elementary-icon-theme.
    - desktop.conf : Use elementary-monochrome for icon theme.
    - Use Clearlooks for Openbox theme.
    - Use black font color for the panel.
