@@ -6,6 +6,9 @@ lubuntu-default-settings (0.7) UNRELEASED; urgency=low
   * etc/xdg/lubuntu/lxdm/lxdm.conf
    - Make Lubuntu the default session by using the [base] session key.
    - Remove last_*, not provided by lxdm.conf in recent lxdm version.
+  * usr/share/lubuntu/openbox/rc.xml
+   - Add missing shortcuts for volume-up and volume-down, and launching
+     various applications. Thanks Kendall Weaver for the patch.
   * debian/control
    - Wrap build-depends and depends.
 
